# brightness_Contrast_and_Gamma

./: BCG  ConvertTo.cpp  BCG.cpp  BCG.py  Brightness&Contrast Slow.py  Brightness&Contrast.py  Gamma.py  README.md
Cpp ready/: BCG no convertTo.cpp  CMakeLists.txt
Python ready/: Brightness&Contrast Slow.py  Brightness&Contrast.py  Brightness_Contrast_and_Gamma  Gamma.py  README.md
